# MicronsFunctionalConnectomics

Fig 3/panel_f/: get_data.ipynb  make_plot.ipynb  oracle_scores.pkl
Fig 3/panel_g/: directions.npy  get_data.ipynb  make_plot.ipynb  tuned_unit_responses.npy  tuned_units.pkl
Fig 6/panel_k/: get_data.ipynb  make_plot.ipynb  post_df.pkl  post_traces.npy  pre_df.pkl  pre_trace.npy
Fig 7/: Fig7-VISp-L3a-Inh-conn-mastersheet.csv  Fig7-VISp-L3a-order1-E-conn.csv  Minnie-Figure 7d.ipynb
Fig 7/Fig7abc/: README.md  connectivity.ipynb  layer_bounds_v3.npy  pyproject.toml
